--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ serde_yaml = "0.9.33"
 tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tower-http = { version = "0.5.2", features = ["fs"] }
