--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "ne
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 tower-http = { version = "0.5.2", features = ["fs"] }
+jsonwebtoken = "9.3.0"
